Ensure %w and %# are also expaned in the 'Copy input' dialog

The fix is quite simple. Just move the existing code for expanding
%# and %w into Session::getDynamicTitle(), where all other tab title
formatters are expanded. That also makes the code simple and natural.

BUG: 175755
FIXED-IN:4.8